test_results.txt
mistralai package not installed. Install with: pip install mistralai
Traceback (most recent call last):
  File "/mnt/3626C55326C514B1/Happier/test_zepto_optimized_storage.py", line 19, in <module>
    from Three_PointO_ArchE.zepto_spr_processor import ZeptoSPRProcessorAdapter
  File "/mnt/3626C55326C514B1/Happier/Three_PointO_ArchE/zepto_spr_processor.py", line 23, in <module>
    from .pattern_crystallization_engine import (
  File "/mnt/3626C55326C514B1/Happier/Three_PointO_ArchE/pattern_crystallization_engine.py", line 31, in <module>
    from .llm_tool import generate_text_llm
  File "/mnt/3626C55326C514B1/Happier/Three_PointO_ArchE/llm_tool.py", line 18, in <module>
    from .spr_manager import SPRManager
  File "/mnt/3626C55326C514B1/Happier/Three_PointO_ArchE/spr_manager.py", line 132
    return [self.sprs[key] for key in sorted(list(found_sprs)) if key in self.sprs]
    ^
IndentationError: expected an indented block after 'else' statement on line 130
